August_30/August_30/src/objects/Credentials__c.object
<CustomObject>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Points__c</fullName>
        <formula>IF(ISPICKVAL(Credential_Name__c,"CPQ Speicalist"), 1, 0)+ 
 
IF(ISPICKVAL(Credential_Name__c,"Marketing Cloud Email Specialist"), 1, 0)+

IF(ISPICKVAL(Credential_Name__c,"Marketing Cloud Social Specialist"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Pardot Specialist"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Administrator"), 0, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Advanced Administrator"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Platform App Builder"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Developer 401"), 0, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Platform Developer I"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Platform Developer II"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Commerce Cloud Digital Developer"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Sales Cloud Consultant"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Service Cloud Consultant"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Community Cloud Consultant"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Field Service Lightning Consultant"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Pardot Consultant"), 2, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Technical Architect – both domains + review board"), 50, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"System Architect – Domain Architect"), 50, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Application Architect – Domain Architect"), 50, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Development Lifecycle and Deployment Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Identity and Access Management Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Integration Architecture Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Sharing &amp; Visibility Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Data Architecture and Management Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Sharing &amp; Visibility Designer"), 1, 0)+ 

IF( ISPICKVAL(Credential_Name__c,"Mobile Solutions Architecture Designer"), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certification Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credential_Name__c</fullName>
        <label>Credential Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Lightning Roll-Out Specialist Accreditation</fullName>
                </value>
                <value>
                    <fullName>Administrator</fullName>
                </value>
                <value>
                    <fullName>Advanced Administrator</fullName>
                </value>
                <value>
                    <fullName>Platform App Builder</fullName>
                </value>
                <value>
                    <fullName>Application Architect – Domain Architect</fullName>
                </value>
                <value>
                    <fullName>Commerce Cloud Digital Developer</fullName>
                </value>
                <value>
                    <fullName>Community Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>CPQ Specialist</fullName>
                </value>
                <value>
                    <fullName>Data Architecture and Management Designer</fullName>
                </value>
                <value>
                    <fullName>Development Lifecycle and Deployment Designer</fullName>
                </value>
                <value>
                    <fullName>Field Service Lightning Consultant</fullName>
                </value>
                <value>
                    <fullName>Identity and Access Management Designer</fullName>
                </value>
                <value>
                    <fullName>Integration Architecture Designer</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud Email Specialist</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud Social Specialist</fullName>
                </value>
                <value>
                    <fullName>Mobile Solutions Architecture Designer</fullName>
                </value>
                <value>
                    <fullName>Pardot Consultant</fullName>
                </value>
                <value>
                    <fullName>Pardot Specialist</fullName>
                </value>
                <value>
                    <fullName>Platform Developer 401</fullName>
                </value>
                <value>
                    <fullName>Platform Developer I</fullName>
                </value>
                <value>
                    <fullName>Platform Developer II</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Service Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Sharing &amp; Visibility Designer</fullName>
                </value>
                <value>
                    <fullName>System Architect – Domain Architect</fullName>
                </value>
                <value>
                    <fullName>Technical Architect – both domains + review board</fullName>
                </value>
                <value>
                    <fullName>Advanced Apex Specialist</fullName>
                </value>
                <value>
                    <fullName>Apex Specialist</fullName>
                </value>
                <value>
                    <fullName>Business Administration Specialist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credentials_by_Contact_Type__c</fullName>
        <formula>Contact_Name__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credentials by Contact Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Credentials</relationshipLabel>
        <relationshipName>Credentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Credentials</label>
    <nameField>
        <displayFormat>Credentials Sl No-{0000}</displayFormat>
        <label>Credential Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Accreditations</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Credential_Name__c</columns>
        <columns>Acquired_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credentials__c.Accreditation</value>
        </filters>
        <label>Accreditations</label>
    </listViews>
    <listViews>
        <fullName>All_Certifications</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Credential_Name__c</columns>
        <columns>Acquired_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credentials__c.Certification</value>
        </filters>
        <label>Certifications</label>
    </listViews>
    <listViews>
        <fullName>All_Credentials</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Credential_Name__c</columns>
        <columns>Renewal_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Credentials</label>
    </listViews>
    <listViews>
        <fullName>All_Superbadges</fullName>
        <columns>NAME</columns>
        <columns>Contact_Name__c</columns>
        <columns>Credential_Name__c</columns>
        <columns>Acquired_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Credentials__c.Superbadge</value>
        </filters>
        <label>Superbadges</label>
    </listViews>
    <listViews>
        <fullName>Contractors</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>Contact_Name__c</columns>
        <columns>Credential_Name__c</columns>
        <columns>Credentials_by_Contact_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Certification_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Credentials_by_Contact_Type__c</field>
            <operation>equals</operation>
            <value>Practice_Contractor</value>
        </filters>
        <filters>
            <field>Credentials_by_Contact_Type__c</field>
            <operation>equals</operation>
            <value>TEK_Contractor</value>
        </filters>
        <label>Contractors</label>
    </listViews>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Superbadge</fullName>
        <active>true</active>
        <label>Superbadge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Accreditation</fullName>
        <active>true</active>
        <label>Accreditation</label>
    </recordTypes>
</CustomObject>